--- a/src/templates/Home/styles.scss
+++ b/src/templates/Home/styles.scss
@@ -2,7 +2,7 @@
 }
 
 .section-title {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .presentation-panels {
@@ -59,6 +59,7 @@
 
   @include belowTurningPoint() {
     flex-direction: column;
+    list-style-position: inside;
     gap: 0;
   }
 }
@@ -69,5 +70,6 @@
 }
 
 .post-topic-link {
-  margin-bottom: 5px;
+  display: block;
+  padding: 8px 0;
 }
