--- a/src/templates/projects/styles.scss
+++ b/src/templates/projects/styles.scss
@@ -21,11 +21,6 @@
   padding: 8px 2px;
 }
 
-.featured-projects,
-.all-projects {
-  margin-top: 40px;
-}
-
 .all-projects-head {
   display: flex;
   justify-content: space-between;
